--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@react-three/fiber": "^8.11.5",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -11,6 +12,7 @@
     "animate.css": "^4.1.1",
     "daisyui": "^2.50.1",
     "firebase": "^9.17.1",
+    "framer-motion-3d": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.0",
@@ -20,6 +22,7 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-type-animation": "^2.1.2",
+    "three": "^0.150.0",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
